--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   animated_bottom_navigation_bar: ^1.3.3
   google_fonts: ^6.2.1
   flutter_screenutil: ^5.6.0
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
