--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_screenutil: ^5.6.0
   carousel_slider: ^5.0.0
+  flutter_svg: ^2.0.10+1
+  lottie: ^3.1.2
 
 dev_dependencies:
   flutter_test:
@@ -66,8 +68,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+   - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
