--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   carousel_slider: ^5.0.0
   flutter_svg: ^2.0.10+1
   lottie: ^3.1.2
+  url_launcher: ^6.3.0
+  google_maps_flutter: ^2.9.0
 
 dev_dependencies:
   flutter_test:
